Cleaning code, making it as simple as possible to only have option with and without cloudmask. Not done cleaning code (stopped right before the Functions section

--- a/image_retrieval_downscaling.ipynb
+++ b/image_retrieval_downscaling.ipynb
@@ -64,10 +64,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e2b74252-b27b-41d7-860e-f8a5d44fd53a",
+   "metadata": {},
+   "source": [
+    "## To Change"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b768d6c-c952-4f08-b632-59d88806ce18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define correct week \n",
+    "week = '2300'\n",
+    "\n",
+    "# define type of operation --> 'cloudmasked/', 'filled/', ''\n",
+    "operation = ''\n",
+    "\n",
+    "# define landsat buffer (days) to make sure there are enough Landsat images \n",
+    "l8_buffer = ee.Number(30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f5d05ec0",
    "metadata": {},
    "source": [
     "## Set-up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a865392-74a8-4202-bfb6-d56b93857376",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load extent look up table \n",
+    "extents_lut = pd.read_csv('data/step_extents/LA2_step_ex_w' + week + '.csv')\n",
+    "\n",
+    "# get largest extent from last row of look up table \n",
+    "large_extent = extents_lut.iloc[-1]"
    ]
   },
   {
@@ -112,59 +151,25 @@
     }
    ],
    "source": [
-    "# define dates \n",
-    "start_date = ee.Date('2014-01-14') # '2014-02-15'\n",
-    "end_date = ee.Date('2014-02-18') # '2012-02-17'"
+    "# retrieve date range from table \n",
+    "start_date = ee.Date(large_extent.loc['start_date_prev_week'], 'Africa/Maputo') #ee.Date('2014-01-14') # '2014-02-15'\n",
+    "end_date = ee.Date(large_extent.loc['end_date'], 'Africa/Maputo') #ee.Date('2014-02-18') # '2012-02-17'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9144fb12-4011-46d8-9490-0e15118ef136",
+   "execution_count": null,
+   "id": "ae1cc282-1e54-48f2-a50d-d2e4b3fa880c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <style>\n",
-       "                .geemap-dark {\n",
-       "                    --jp-widgets-color: white;\n",
-       "                    --jp-widgets-label-color: white;\n",
-       "                    --jp-ui-font-color1: white;\n",
-       "                    --jp-layout-color2: #454545;\n",
-       "                    background-color: #383838;\n",
-       "                }\n",
-       "                    \n",
-       "                .geemap-dark .jupyter-button {\n",
-       "                    --jp-layout-color3: #383838;\n",
-       "                }\n",
-       "                \n",
-       "                .geemap-colab {\n",
-       "                    background-color: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "                    \n",
-       "                .geemap-colab .jupyter-button {\n",
-       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "            </style>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# set time-window for interpolation (how far will interpolate) --> NO INTERPOLATION DONE IN THIS CODE BUT JUST IN CASE IN FUTURE\n",
-    "# source: https://spatialthoughts.com/2021/11/08/temporal-interpolation-gee/\n",
-    "days = ee.Number(10) \n",
+    "# create large extent (region) geometry \n",
+    "large_extent_coords = [[[large_extent.loc['xmin'], large_extent.loc['ymin']],\n",
+    "                        [large_extent.loc['xmin'], large_extent.loc['ymax']], \n",
+    "                        [large_extent.loc['xmax'], large_extent.loc['ymin']], \n",
+    "                        [large_extent.loc['xmax'], large_extent.loc['ymax']]]]\n",
     "\n",
-    "# convert to milliseconds (for gap filling step)\n",
-    "millis = days.multiply(1000*60*60*24)"
+    "large_region = ee.Geometry.Polygon(large_extent_coords, proj = 'EPSG:32733', evenOdd = False)"
    ]
   },
   {
@@ -269,6 +274,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4cc792d-e6a8-485e-bf20-22121599333c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get output folder path for MODIS images\n",
+    "# source: https://github.com/gee-community/geemap/blob/master/examples/notebooks/11_export_image.ipynb\n",
+    "out_dir_m = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis/' + operation + week)\n",
+    "\n",
+    "# get output folder path for Landsat images\n",
+    "out_dir_l8 = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/l8/' + operation + week)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1c6f422b",
    "metadata": {},
@@ -320,7 +340,25 @@
    "source": [
     "## Landsat 8 \n",
     "# note: ee.List should also normally include 180 (removed it for this sampled study area)\n",
+    "# source: https://developers.google.com/earth-engine/apidocs/ee-date-advance#colab-python\n",
     "l8 = ee.ImageCollection('LANDSAT/LC08/C02/T1_L2') \\\n",
+    "        .filterDate(start_date.advance(l8_buffer.multiply(-1), 'day'), l8_buffer.advance(days, 'day')) \\\n",
+    "        .filterBounds(large_region)\n",
+    "\n",
+    "# remove B1 from Landsat 8 image collection \n",
+    "# source: https://developers.google.com/earth-engine/apidocs/ee-list-remove\n",
+    "l8 = l8.select(ee.List(l8.first().bandNames().getInfo()).remove('SR_B1'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c9bc375-bbac-4d85-b675-ee413a362de6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete if version above works \n",
+    "l8_original = ee.ImageCollection('LANDSAT/LC08/C02/T1_L2') \\\n",
     "    .filterDate('2008-10-01', '2014-10-01') \\\n",
     "    .filter(ee.Filter.inList('WRS_PATH', ee.List([179]))) \\\n",
     "    .filter(ee.Filter.eq('WRS_ROW', 73)) \\\n",
@@ -328,7 +366,7 @@
     "\n",
     "# remove B1 from Landsat 8 image collection \n",
     "# source: https://developers.google.com/earth-engine/apidocs/ee-list-remove\n",
-    "l8 = l8.select(ee.List(l8.first().bandNames().getInfo()).remove('SR_B1'))\n",
+    "#l8 = l8.select(ee.List(l8.first().bandNames().getInfo()).remove('SR_B1'))\n",
     "\n",
     "# retrieve L8 dates \n",
     "# source: https://developers.google.com/earth-engine/apidocs/ee-imagecollection-aggregate_array\n",
@@ -383,69 +421,10 @@
    ],
    "source": [
     "## MODIS daily 250m\n",
-    "# take larger time range to include images if I want gap filling of cloudmasked pixels \n",
-    "# source: https://developers.google.com/earth-engine/apidocs/ee-date-advance#colab-python\n",
     "#alternative to filterDate: filter(ee.Filter.inList('system:index', l8_dates)) \\\n",
     "modis_250 = ee.ImageCollection('MODIS/061/MOD09GQ') \\\n",
-    "    .filterDate(start_date.advance(days.multiply(-1), 'day'), end_date.advance(days, 'day')) \\\n",
-    "    .filterBounds(sample_area) \\\n",
-    "\n",
-    "# import MODIS 500m dataset (contains information for cloudmasking)\n",
-    "modis_500 = ee.ImageCollection('MODIS/006/MOD09GA') \\\n",
-    "        .filterDate(start_date.advance(days.multiply(-1), 'day'), end_date.advance(days, 'day'))  \\\n",
-    "        .filterBounds(sample_area)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "52189b8f-866f-4334-94de-77b38ad06354",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <style>\n",
-       "                .geemap-dark {\n",
-       "                    --jp-widgets-color: white;\n",
-       "                    --jp-widgets-label-color: white;\n",
-       "                    --jp-ui-font-color1: white;\n",
-       "                    --jp-layout-color2: #454545;\n",
-       "                    background-color: #383838;\n",
-       "                }\n",
-       "                    \n",
-       "                .geemap-dark .jupyter-button {\n",
-       "                    --jp-layout-color3: #383838;\n",
-       "                }\n",
-       "                \n",
-       "                .geemap-colab {\n",
-       "                    background-color: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "                    \n",
-       "                .geemap-colab .jupyter-button {\n",
-       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "            </style>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# combine datasets\n",
-    "# pixel with certain MODIS 500m value can be selected for MODIS 250m \n",
-    "# source: https://gis.stackexchange.com/questions/308456/get-a-mask-for-modis-250m-mod09gq-using-modis-500m-mod09ga-in-google-earth\n",
-    "modis_combined = modis_500.combine(modis_250)\n",
-    "\n",
-    "# new name of MODIS 250m bands (to avoid having two of similar name)\n",
-    "modisBands = ['sur_refl_b01_1', 'sur_refl_b02_1']\n",
-    "renamedBands = ['red', 'nir']"
+    "    .filterDate(start_date, end_date) \\\n",
+    "    .filterBounds(large_region)"
    ]
   },
   {
@@ -1165,54 +1144,6 @@
    "metadata": {},
    "source": [
     "## Export data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "a50cd2a4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <style>\n",
-       "                .geemap-dark {\n",
-       "                    --jp-widgets-color: white;\n",
-       "                    --jp-widgets-label-color: white;\n",
-       "                    --jp-ui-font-color1: white;\n",
-       "                    --jp-layout-color2: #454545;\n",
-       "                    background-color: #383838;\n",
-       "                }\n",
-       "                    \n",
-       "                .geemap-dark .jupyter-button {\n",
-       "                    --jp-layout-color3: #383838;\n",
-       "                }\n",
-       "                \n",
-       "                .geemap-colab {\n",
-       "                    background-color: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "                    \n",
-       "                .geemap-colab .jupyter-button {\n",
-       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "            </style>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# get output folder path \n",
-    "# source: https://github.com/gee-community/geemap/blob/master/examples/notebooks/11_export_image.ipynb\n",
-    "out_dir_l8 = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/l8')\n",
-    "out_dir_m = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis/cloudmasked')"
    ]
   },
   {
