Fixed typo in large region geometry. Order of coordinates was wrong and did not make a rectangle but two triangles instead

--- a/image_retrieval_ssf.ipynb
+++ b/image_retrieval_ssf.ipynb
@@ -213,9 +213,9 @@
     "large_extent = extents_lut.iloc[-1]\n",
     "\n",
     "large_extent_coords = [[[large_extent.loc['xmin'], large_extent.loc['ymin']],\n",
-    "                        [large_extent.loc['xmin'], large_extent.loc['ymax']], \n",
-    "                        [large_extent.loc['xmax'], large_extent.loc['ymin']], \n",
-    "                        [large_extent.loc['xmax'], large_extent.loc['ymax']]]]\n",
+    "                        [large_extent.loc['xmin'], large_extent.loc['ymax']],\n",
+    "                        [large_extent.loc['xmax'], large_extent.loc['ymax']],\n",
+    "                        [large_extent.loc['xmax'], large_extent.loc['ymin']]]]\n",
     "\n",
     "large_region = ee.Geometry.Polygon(large_extent_coords, proj = 'EPSG:32733', evenOdd = False)\n",
     "\n",
