Tried understanding why cloudmasked images do not get exported, but gap filled images do. Could not figure it out...

--- a/image_retrieval_ssf.ipynb
+++ b/image_retrieval_ssf.ipynb
@@ -163,7 +163,10 @@
    ],
    "source": [
     "# load extent look up table \n",
-    "extents_lut = pd.read_csv('data/step_extents/LA2_step_ex_w2043.csv')"
+    "extents_lut = pd.read_csv('data/step_extents/LA2_step_ex_w2027.csv')\n",
+    "\n",
+    "# test\n",
+    "#extents_lut = pd.read_csv('data/step_extents/LA2_step_ex_w2300.csv')"
    ]
   },
   {
@@ -317,8 +320,10 @@
    "source": [
     "# get output folder paths for current MODIS images and images from week prior\n",
     "# source: https://github.com/gee-community/geemap/blob/master/examples/notebooks/11_export_image.ipynb\n",
-    "out_dir = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis_ssf/2043')\n",
-    "#out_dir_lag = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis_ssf/lag')"
+    "out_dir = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis_ssf/2027')\n",
+    "\n",
+    "# test\n",
+    "#out_dir = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis/cloudmasked/2300')"
    ]
   },
   {
@@ -786,6 +791,9 @@
     "# function to clip image to study area\n",
     "def clipToAOI(image): \n",
     "    result = image.clip(bbox)\n",
+    "    \n",
+    "    # test\n",
+    "    #result = image.clip(large_region)\n",
     "    return result.copyProperties(image, ['system:id'])"
    ]
   },
@@ -1291,7 +1299,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
+   "id": "78a7012a-d2b3-4a9a-84e3-82b4e7db60ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ee' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# test for downscaling with interpolation\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m start_date \u001b[38;5;241m=\u001b[39m \u001b[43mee\u001b[49m\u001b[38;5;241m.\u001b[39mDate(large_extent\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstart_date_prev_week\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAfrica/Maputo\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m end_date \u001b[38;5;241m=\u001b[39m ee\u001b[38;5;241m.\u001b[39mDate(large_extent\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mend_date\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAfrica/Maputo\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m modis \u001b[38;5;241m=\u001b[39m modis_interpolated\u001b[38;5;241m.\u001b[39mfilterDate(start_date, end_date)\u001b[38;5;241m.\u001b[39mselect([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnir\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mred\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ee' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# test for downscaling with interpolation\n",
+    "start_date = ee.Date(large_extent.loc['start_date_prev_week'], 'Africa/Maputo')\n",
+    "end_date = ee.Date(large_extent.loc['end_date'], 'Africa/Maputo')\n",
+    "modis = modis_interpolated.filterDate(start_date, end_date).select(['nir', 'red'])\n",
+    "modis_reproj = modis.map(reprojectModis)\n",
+    "modis_clipped = modis_reproj.map(clipToAOI)\n",
+    "#geemap.ee_export_image_collection(modis_clipped, out_dir = out_dir, region = large_region)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "df21c7ba",
    "metadata": {},
    "outputs": [
@@ -1335,128 +1371,128 @@
      "text": [
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_26.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_06.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/7a949989adc5321ed422c17b00f0d529-f18a9ec745f47b68c3e7e5b2df3a1641:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/f72ff0014085b6465b0322407197f49c-333363d9c230ff810fbb662859cd8e10:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_26.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_06.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_19.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_10_30.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/f5fbcc5874e727bb1e49ae3de4901c08-ce03b1cab64fd8506c5a450a4f8c3397:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/d6edcb71c805721fcc4df63a9127a59b-463af572f8f51f77906662dbee8e0c48:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_19.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_10_30.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_27.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_07.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/87694d969626fc341154fc33f0bad9a1-d562bf114b6aab20a14b5397827d0043:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/ba1b08c42c2ebbad48ca8a539b5b20fc-9a0896bd54475da186eb12bb950747bb:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_27.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_07.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_20.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_10_31.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/fffd8558f60fc3734181937664fc7e7e-6c5dedf2be233c4280baa42f41baa59e:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/b4755391598e1456951cdfe1a84e95eb-92173cf74fa264daae9c4da53740dfdb:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_20.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_10_31.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_28.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_08.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/80eca0d53b2bcf7396f3d1fb8874100a-b138eacc465c6acdc22cc19a33777e6a:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/dde0b855f1bbc71f6c37ae39294d7478-f6d6c0eca9d7726f8b2d7da6f870dec4:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_28.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_08.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_21.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_01.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/aa23793cef0f3efceb7f1bc41ef5828f-d43d82dd71c8b9c18dd8b023454fe59b:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/4310058c92100dfa38027abf8f914173-8c80efde0961d0451317113ea2ed95c0:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_21.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_01.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_03_01.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_09.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/82f7bc021acac545ab9677bf4f5860d5-3b4b4ae14deb1692b8e4615747901815:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/82d232d6d6d53bae2c25766787935e31-e96491fa0e0de52241db0c8879278678:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_03_01.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_09.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_22.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_02.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/d05b33b4a7476f0ad21df91828f23a68-fde8250a09047f1389c3d1818db3af29:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/8f59a07e0bbefea8a6a1981409de1ec4-61556c4a79665b67cf305be24008de19:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_22.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_02.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_03_02.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_10.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/7d40b124718e18149922769e36b5596a-088853156e8defa9b4eb554e53d0ad09:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/46918adf419d651cfc1227057ebdea14-8c3658ae5aa82dd0dda64785d7ecd124:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_03_02.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_10.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_23.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_03.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/015d25f7266a31286201c950ffd7e93d-afdec002c4c44c433bd79bb111ee93eb:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/55630a21489582c82cbbeab56c8f4087-1ebdf93e8a0de7e001d37dca1f4fc405:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_23.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_03.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_03_03.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_11.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/234367100f9100bcfd187a5c8b3b6573-6a81cf32a24c11d08dfff30da7639131:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/571030940a594da9920d90c74e531687-b0b0d025e68d42704eeb6de1231ca3e2:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_03_03.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_11.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_24.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_04.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/c2af52d99c79b0901dc585d9b905d516-8bf288da378006dc71470bc9e7680f7c:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/166fe426007116cc9d23e2718e7f6701-129397dcfa127486b4f19115658dd419:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_24.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_04.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_03_04.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_12.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/c8b0351fba227d337a5c259755e5df41-4267459c2c699e4e674fc703f6e1dd9c:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/f82f56ab306855bc27f74e947c04b0bc-4d4430389c22c433562f5da0f746e035:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_03_04.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_12.tif\n",
       "\n",
       "\n",
       "Total number of images: 1\n",
       "\n",
-      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_25.tif\n",
+      "Exporting 1/1: /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_05.tif\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/f4b5e450df41b0f08f274fe9858b97e1-ddfa8cbbb951f2107d813d4f19286dcb:getPixels\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/47b8f83752da37663a294e7b3bf75670-05bf1edf7e7cd10c2677cdb6e99bacb2:getPixels\n",
       "Please wait ...\n",
-      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2043/2009_02_25.tif\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis_ssf/2027/2008_11_05.tif\n",
       "\n",
       "\n"
      ]
