--- a/image_retrieval_ssf_modis8d.ipynb
+++ b/image_retrieval_ssf_modis8d.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "62484cf2-4f91-4a44-99f6-b5799adb6595",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "7753d218",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "d5988387",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "44d48b54",
    "metadata": {},
    "outputs": [
@@ -163,12 +163,15 @@
    ],
    "source": [
     "# load extent look up table \n",
-    "extents_lut = pd.read_csv('data/step_extents/LA2_step_ex_w2027.csv')"
+    "#extents_lut = pd.read_csv('data/step_extents/LA2_step_ex_w2027.csv')\n",
+    "\n",
+    "# test downscaling\n",
+    "extents_lut = pd.read_csv('data/step_extents/LA2_step_ex_w2300.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "81750ee4-fdec-410f-9257-c71fb514167e",
    "metadata": {},
    "outputs": [
@@ -222,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "88920f40",
    "metadata": {},
    "outputs": [
@@ -264,7 +267,11 @@
    "source": [
     "# get output folder paths for current MODIS images and images from week prior\n",
     "# source: https://github.com/gee-community/geemap/blob/master/examples/notebooks/11_export_image.ipynb\n",
-    "out_dir = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis_ssf/8_day_2027')"
+    "#out_dir = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis_ssf/8_day_2027')\n",
+    "\n",
+    "\n",
+    "# test downscaling\n",
+    "out_dir = os.path.join(os.path.expanduser('~'), 'Documents/MSc_Thesis/data/modis/8d/2300')"
    ]
   },
   {
@@ -285,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "0e27b3e3",
    "metadata": {},
    "outputs": [
@@ -332,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d4bca1b3",
    "metadata": {},
    "outputs": [
@@ -374,51 +381,17 @@
    "source": [
     "# function to clip image to study area\n",
     "def clipToAOI(image): \n",
-    "    result = image.clip(bbox)\n",
+    "    #result = image.clip(bbox)\n",
+    "    result = image.clip(large_region)\n",
     "    return result.copyProperties(image, ['system:id'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "69221a53-e424-4bc0-8eb9-9efe3582409f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <style>\n",
-       "                .geemap-dark {\n",
-       "                    --jp-widgets-color: white;\n",
-       "                    --jp-widgets-label-color: white;\n",
-       "                    --jp-ui-font-color1: white;\n",
-       "                    --jp-layout-color2: #454545;\n",
-       "                    background-color: #383838;\n",
-       "                }\n",
-       "                    \n",
-       "                .geemap-dark .jupyter-button {\n",
-       "                    --jp-layout-color3: #383838;\n",
-       "                }\n",
-       "                \n",
-       "                .geemap-colab {\n",
-       "                    background-color: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "                    \n",
-       "                .geemap-colab .jupyter-button {\n",
-       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "            </style>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# function to calculate NDVI \n",
     "def addNDVI(image): \n",
@@ -535,6 +508,99 @@
     "Map.add_layer(enp_geom, None, 'Etosha National Park')\n",
     "#Map.add_layer(test, visualization_modis, 'Cloudfree MODIS')\n",
     "#Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2280c52c-85a5-4d17-b8fa-9248ba51e2fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "                \n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "                    \n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of images: 4\n",
+      "\n",
+      "Exporting 1/4: /home/osboxes/Documents/MSc_Thesis/data/modis/8d/2300/2014_01_17.tif\n",
+      "Generating URL ...\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/d0d294991242b0fa00e41f3f83cb1a69-fd00f602b567ab01e86ce21d3b0452d3:getPixels\n",
+      "Please wait ...\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis/8d/2300/2014_01_17.tif\n",
+      "\n",
+      "\n",
+      "Exporting 2/4: /home/osboxes/Documents/MSc_Thesis/data/modis/8d/2300/2014_01_25.tif\n",
+      "Generating URL ...\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/5a0cd268f1c5ed7c70f5681428cec0d5-dca1d43aaabfc36cfea60a1451fa5841:getPixels\n",
+      "Please wait ...\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis/8d/2300/2014_01_25.tif\n",
+      "\n",
+      "\n",
+      "Exporting 3/4: /home/osboxes/Documents/MSc_Thesis/data/modis/8d/2300/2014_02_02.tif\n",
+      "Generating URL ...\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/a3af147cd4a4e15b43db0fbabdbbc08c-7fc687731584c29e71377fa013ef292c:getPixels\n",
+      "Please wait ...\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis/8d/2300/2014_02_02.tif\n",
+      "\n",
+      "\n",
+      "Exporting 4/4: /home/osboxes/Documents/MSc_Thesis/data/modis/8d/2300/2014_02_10.tif\n",
+      "Generating URL ...\n",
+      "Downloading data from https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/884f7e1ff299825453bf6078b546157f-b5a68275213c2fcde7dd5269ee313cf2:getPixels\n",
+      "Please wait ...\n",
+      "Data downloaded to /home/osboxes/Documents/MSc_Thesis/data/modis/8d/2300/2014_02_10.tif\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test downscaling\n",
+    "start_date = ee.Date(large_extent.loc['start_date_prev_week'], 'Africa/Maputo')\n",
+    "end_date = ee.Date(large_extent.loc['end_date'], 'Africa/Maputo')\n",
+    "\n",
+    "modis = ee.ImageCollection('MODIS/061/MOD09Q1') \\\n",
+    "        .filterDate(ee.Date(start_date, 'Africa/Maputo').advance(ee.Number(8).multiply(-1), 'day'), ee.Date(end_date, 'Africa/Maputo').advance(ee.Number(8), 'day')) \\\n",
+    "        .filterBounds(large_region) \\\n",
+    "        .select(['sur_refl_b02', 'sur_refl_b01'], ['nir', 'red'])\n",
+    "\n",
+    "modis_reproj = modis.map(reprojectModis)\n",
+    "\n",
+    "modis_clipped = modis_reproj.map(clipToAOI)\n",
+    "geemap.ee_export_image_collection(modis_clipped, out_dir = out_dir, region = large_region)"
    ]
   },
   {
